# FantasyAi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  get_sport5_starters.py  test.py
players_status_analyzer/: README.md  pyproject.toml
players_status_analyzer/src/: ucl_player_status_20251209_150339.json
players_status_analyzer/src/players_status_analyzer/: crew.py  get_sport5_starters.py  main.py  test.py  trslate_players_name.py
players_status_analyzer/src/players_status_analyzer/config/: agents.yaml  tasks.yaml
players_status_analyzer/src/players_status_analyzer/tools/: custom_tool.py
